[package]
name = "blog-grpc"
version = "0.1.0"
authors = ["niconico <joulin.nicolas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.1"
prost = "0.6.1"

[build-dependencies]
tonic-build = "0.3.1"
